# progetto-fitness-c

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  app_db.c  app_db.h  client_api.c  client_api.h  client_logica.h  client_main.c  client_metriche.c  client_modello.h  client_piani.c  client_programmi.c  client_socket.c  client_socket.h  client_storico.c  client_ui.c  client_ui.h  db_manager.c  db_manager.h  gui_core (1).h  gui_core.h  gui_main.c  gui_schermate.c  gui_schermate_auth.c  gui_schermate_cliente.c  gui_schermate_trainer.c  gui_widgets.c  interfaccia.c  interfaccia.h  lista_dinamica.c  lista_dinamica.h  logica.c  logica.h  main.c  main_logic.c  network_manager.c  network_manager.h  (+1 more)
